--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.10"
 dependencies = [
   "fastapi",
   "uvicorn[standard]",
+  "gunicorn",
   "pydantic-settings",
   "sqlalchemy",
   "psycopg2-binary",
